test-cases/negative/test_100_incomplete_expression.lay
# negative test: incomplete expression statement
# expected: parser should reject this

the variable x of type Number is 5 plus


